--- a/member.html
+++ b/member.html
@@ -5,89 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>みんなの翻刻広場（会員専用ページ）</title>
     <link rel="stylesheet" href="styles/style.css">
-</head>
-<style>
-    /* General styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f2f5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-}
+    <style>
+        /* General styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f9f9;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
-/* Header */
-header {
-    background-color: #007BFF;
-    color: white;
+        /* Header */
+        header {
+            background-color: #007BFF;
+            color: white;
+            width: 100%;
+            text-align: left;
+            padding: 20px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 1.5em;
+            flex: 1;
+        }
+
+        .header-right {
+            display: flex;
+            align-items: center;
+        }
+
+        .header-right p {
+            margin: 0 20px 0 0;
+            font-size: 1em;
+        }
+
+        .header-right button {
+            padding: 10px 70px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            color: white;
+            background-color: #007BFF;
+            transition: background-color 0.3s;
+        }
+
+        .header-right button:hover {
+            background-color: #f53131;
+        }
+
+        .header-right button:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+
+        /* Announcement box */
+        .announcement-box {
+    background-color: #ffc9ba; /* Bright yellow background for high visibility */
+    color: #0b0b0b; /* Darker yellow text for contrast */
+    border: 2px solid #ffc9ba; /* Slightly lighter yellow border */
+    border-radius: 10px;
+    padding: 20px;
+    margin: 60px 0; /* Top and bottom margin for spacing */
     width: 100%;
-    text-align: center;
-    padding: 20px 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+    max-width: 90%; /* Full width of the container */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Stronger shadow for depth */
+    font-family: 'Arial', sans-serif; /* Simple, clean font */
+    position: absolute; /* Positioning for fixed placement */
+    top: 20px; /* Space from the top */
+    left: 50px; /* Space from the left */
+    z-index: 100; /* Ensure it's on top of other content */
+    text-align: center; /* Align text to the left for readability */
+    h3{
+        text-align: center;
+    }
+    p{
+        text-align: left;
+    }
 }
 
-/* Main content */
-main {
-    margin-top: 80px; /* Space for the fixed header */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background-color: white;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 600px;
-}
+  
 
-h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-
-p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-}
-
-/* Logout button */
-button {
-    padding: 15px 30px;
-    font-size: 1.1em;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    color: white;
-    background-color: #007BFF;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-button:focus {
-    outline: none;
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
-}
-
-</style>
+    </style>
+</head>
 <body>
     <header>
         <h1>みんなの翻刻広場（会員専用ページ）</h1>
+        <div class="header-right">
+            <p id="welcomeMessage">ようこそ、会員様！</p>
+            <button id="logout">ログアウト</button>
+        </div>
     </header>
     <main>
-        <p id="welcomeMessage">ようこそ、会員様！</p>
-        <button id="logout">ログアウト</button>
+        <div class="announcement-box">
+            <h3>お知らせ</h3>
+            <p>サイトのメンテナンスは毎週日曜日の午前2時から4時まで行われます。</p>
+        </div>
+       
     </main>
     <script type="module">
         import { getAuth, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js';
