--- a/index.html
+++ b/index.html
@@ -3,117 +3,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理者ログイン</title>
+    <title>翻刻広場</title>
+    <link rel="stylesheet" href="styles/style.css">
     <style>
-        /* CSS for Admin Login Page */
+        /* styles/style.css */
         body {
-            font-family: 'Arial', sans-serif;
-            background: radial-gradient(circle at top left, #6e8efb, #a777e3);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: Arial, sans-serif;
             margin: 0;
-            color: #fff;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 0.5rem;
-        }
-
-        p {
-            font-size: 18px;
-            margin-bottom: 0.5rem;
-        }
-
-        #login {
-            background: #fff;
-            border-radius: 16px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-            padding: 2rem;
-            width: 100%;
-            max-width: 360px;
+            padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
+            background-color: #f0f0f0;
         }
 
-        #login input {
-            margin-bottom: 1rem;
-            padding: 0.75rem;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            font-size: 16px;
-            transition: border-color 0.3s;
+        header {
+            background-color: #090909;
+            color: rgb(255, 254, 254);
             width: 100%;
-            box-sizing: border-box;
-        }
-
-        #login input:focus {
-            border-color: #6e8efb;
-            outline: none;
-        }
-
-        #login button {
-            padding: 0.75rem;
-            border: none;
-            border-radius: 8px;
-            background-color: #6e8efb;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        #login button:hover {
-            background-color: #5a7dff;
-        }
-
-        #login button:active {
-            transform: scale(0.98);
-        }
-
-        #error-message {
-            color: #ff4d4d;
-            margin-top: 1rem;
-            font-size: 14px;
             text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column; /* Stack title and nav buttons vertically */
+            align-items: center;
         }
 
-        .register-link {
-            margin-top: 1rem;
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        nav {
+            margin-top: 20px; /* Space between title and nav buttons */
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center; /* Center align nav buttons */
+        }
+
+        nav button {
+            margin: 0 10px;
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        nav .nav-btn {
+            background-color: #007BFF;
+            color: white;
+        }
+
+        nav .nav-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .auth-buttons {
+            display: flex;
+            justify-content: flex-end; /* Align buttons to the right */
+            position: absolute;
+            top: 80px; /* Space below the header */
+            right: 20px; /* Space from the right edge */
+            width: calc(100% - 40px); /* Full width minus padding */
+        }
+
+        .auth-buttons button {
+            margin: 0 5px; /* Space between buttons */
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .auth-buttons .register-btn {
+            background-color: #cbe00a;
+            color: rgb(13, 12, 12);
+        }
+
+        .auth-buttons .register-btn:hover {
+            background-color: #a8c900;
+        }
+
+        .auth-buttons .login-btn {
+            background-color: #cbe00a;
+            color: rgb(17, 15, 15);
+        }
+
+        .auth-buttons .login-btn:hover {
+            background-color: #a8c900;
+        }
+
+        main {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            max-width: 1200px;
+            padding: 1rem;
+        }
+
+        /* Add CSS for the notice box */
+        .notice-box {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 1rem;
+            width: 100%;
+            max-width: 600px;
+            margin: 1rem;
+        }
+
+        .notice-box h2 {
+            font-size: 24px;
+            margin-bottom: 0.5rem;
+        }
+
+        .notice-box p {
             font-size: 16px;
+            margin: 0;
         }
-
-        .register-link a {
-            color: #6e8efb;
-            text-decoration: none;
-        }
-
-        .register-link a:hover {
-            text-decoration: underline;
-        }
-        
     </style>
-    <script type="module" src="app.js" defer></script>
+    <!-- Firebase Setup -->
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js';
+        import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js';
+        
+        const firebaseConfig = {
+            apiKey: "AIzaSyDN9KQ50hwjlzFNc26aMOCS0H06JwggY68",
+            authDomain: "honkoku-hiroba-21400.firebaseapp.com",
+            projectId: "honkoku-hiroba-21400",
+            storageBucket: "honkoku-hiroba-21400.appspot.com",
+            messagingSenderId: "909469448032",
+            appId: "1:909469448032:web:8c62f7f2a978c711cd9005",
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        async function loadNotice() {
+            const docRef = doc(db, "notices", "latest");
+            try {
+                const docSnap = await getDoc(docRef);
+                const noticeContent = docSnap.exists() ? docSnap.data().content : "お知らせはありません。";
+                document.getElementById("notification-box").innerHTML = `<p>${noticeContent}</p>`;
+            } catch (error) {
+                console.error("お知らせの読み込みに失敗しました: ", error);
+                document.getElementById("notification-box").innerHTML = '<p>お知らせの読み込みに失敗しました。</p>';
+            }
+        }
+
+        loadNotice();
+    </script>
 </head>
 <body>
-    <h1>管理者ログイン</h1>
-    <p>みんなで翻刻のログイン・パスワードとは異なります。</p>
-    <p>管理者用のログイン・パスワードの入力をお願いします。</p>
-    <div id="login">
-        <input type="email" id="email" placeholder="メールアドレス" required>
-        <input type="password" id="password" placeholder="パスワード" required>
-        <button onclick="login()">ログイン</button>
-        <div id="error-message"></div>
-        <div class="register-link">
-            <a href="register.html" class="register-button">管理者新規登録</a>
-        </div>
+    <header>
+        <h1>ようこそ！！みんなの翻刻広場へ</h1>
+        <nav>
+            <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
+            <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
+            <button class="nav-btn" onclick="location.href='public/index.html'">管理者ログイン</button>
+        </nav>
+    </header>
+    <div class="auth-buttons">
+        <button class="register-btn" onclick="location.href='register.html'">新規会員登録</button>
+        <button class="login-btn" onclick="location.href='login.html'">ログイン</button>
     </div>
+    <main>
+        <!-- Notice box -->
+        <div class="notice-box">
+            <h2>お知らせ</h2>
+            <div id="notification-box">
+                <p>最新のお知らせがここに表示されます。</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
