--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
         <nav>
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
-            <button class="nav-btn" onclick="location.href='public/index.html'">管理者ログイン</button>
+            <button class="nav-btn" onclick="location.href='index2.html'">管理者ログイン</button>
         </nav>
     </header>
     <div class="auth-buttons">
-        <button class="register-btn" onclick="location.href='register.html'">新規会員登録</button>
+        <button class="register-btn" onclick="location.href='register2.html'">新規会員登録</button>
         <button class="login-btn" onclick="location.href='login.html'">ログイン</button>
     </div>
     <main>
