--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <nav>
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
-            <button class="nav-btn" onclick="location.href='index2.html'">管理者ログイン</button>
+            <button class="nav-btn" onclick="location.href='public/index2.html'">管理者ログイン</button>
         </nav>
     </header>
     <div class="auth-buttons">
