--- a/register.html
+++ b/register.html
@@ -118,7 +118,7 @@ button:active {
 <body>
     <header class="header">
         <h1>管理者登録</h1>
-        <p>下記のフォームにメール・パスワード・運営から伝えられた数字を入力してください</p>
+        <p>下記のフォームにメール・パスワード・運営から伝えられた管理者招待コード７桁を入力してください</p>
 
     </header>
     
