--- a/index2.html
+++ b/index2.html
@@ -115,6 +115,9 @@
         <div class="register-link">
             <a href="register.html" class="register-button">管理者新規登録</a>
         </div>
+        <div class="register-link">
+            <a href="index.html" class="register-button">トップへ戻る</a>
+        </div>
         
         
     </div>
