--- a/member.html
+++ b/member.html
@@ -74,7 +74,7 @@
         main {
             margin-top: 80px; /* Adjust for header height */
             padding: 20px;
-            width: 100%;
+            width: 96%;
         }
 
         /* Section styles */
@@ -85,6 +85,7 @@
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
+            margin-left: 10px;
             width: 100%;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: left;
