--- a/admin.html
+++ b/admin.html
@@ -50,6 +50,12 @@
             background: #e03a3a;
         }
 
+        .user-info {
+            color: #fff;
+            font-size: 16px;
+            margin-right: 1rem;
+        }
+
         main {
             flex: 1;
             margin-top: 1rem;
@@ -139,6 +145,7 @@
     <div class="container">
         <header>
             <h1>管理者ダッシュボード</h1>
+            <div class="user-info">ようこそ、ユーザー名</div>
             <button id="logout-button">ログアウト</button>
         </header>
         <main>
