--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 <body>
     <header>
-        <h1>ようこそ！！みんなの翻刻広場へ</h1>
+        <h1>ようこそ！！みんなの活字化広場へ</h1>
         <nav>
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
