--- a/register.html
+++ b/register.html
@@ -104,31 +104,35 @@ button:active {
 }
 
 #success-message {
-    color: #4caf50;
+    color: #070707;
 }
 
 
     </style>
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理者登録</title>
-    <script type="module" src="register.js"></script>
+    <script type="module" src="register.js" defer></script>
 </head>
 <body>
     <header class="header">
         <h1>管理者登録</h1>
         <p>下記のフォームにメール・パスワード・運営から伝えられた管理者招待コード７桁を入力してください</p>
-
     </header>
     
     <div id="register">
-        <input type="email" id="email" placeholder="メールアドレス" required>
-        <input type="password" id="password" placeholder="パスワード" required>
-        <input type="password" id="adminKey" placeholder="管理者招待ナンバー" required>
-        <button onclick="register()">申請する</button>
-        <div id="error-message"></div>
-        <div id="success-message"></div>
+        <form id="registerForm">
+            <input type="text" id="name" name="name" placeholder="ユーザー名" required>
+            <input type="email" id="email" name="email" placeholder="メールアドレス" required>
+            <input type="password" id="password" name="password" placeholder="パスワード" required>
+            <input type="password" id="adminKey" name="adminKey" placeholder="管理者招待コード" required>
+            <button type="submit">認証</button>
+            <div id="error-message"></div>
+            <div id="success-message"></div>
+        </form>
     </div>
 </body>
 </html>
