--- a/folder.html
+++ b/folder.html
@@ -7,9 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f9;
         }
 
         .gallery-container {
@@ -23,20 +23,148 @@
             position: relative;
             overflow: hidden;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
         }
 
         .gallery-item img {
             width: 100%;
             height: auto;
             display: block;
+            transition: transform 0.3s;
+        }
+
+        #text-input-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+
+        #text-input-wrapper {
+            display: flex;
+            width: 80%;
+            max-width: 1200px;
+            height: 80%;
+            background-color: #fff;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        #text-input-wrapper img {
+            width: 60%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+        #text-input-content {
+            width: 40%;
+            padding: 1rem;
+            box-sizing: border-box;
+        }
+
+        #text-input-content textarea {
+            width: 100%;
+            height: 70%;
+            margin-bottom: 1rem;
+            padding: 0.75rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            resize: vertical;
+            font-size: 16px;
+        }
+
+        #text-input-content button {
+            padding: 0.75rem;
+            border: none;
+            border-radius: 4px;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            width: 100%;
+            margin-bottom: 0.5rem;
+            box-sizing: border-box;
+        }
+
+        #send-button {
+            background-color: #007bff;
+        }
+
+        #send-button:hover {
+            background-color: #0056b3;
+        }
+
+        #send-button:active {
+            background-color: #00408d;
+        }
+
+        #close-button {
+            background-color: #dc3545;
+        }
+
+        #close-button:hover {
+            background-color: #c82333;
+        }
+
+        #close-button:active {
+            background-color: #bd2130;
+        }
+
+        .zoom-controls {
+            display: flex;
+            gap: 0.5rem;
+            margin-top: 1rem;
+        }
+
+        .zoom-controls button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 0.5rem;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+        }
+
+        .zoom-controls button:hover {
+            background-color: #0056b3;
+        }
+
+        .zoom-controls button:active {
+            background-color: #00408d;
         }
     </style>
-    <script type="module" src="folder.js"></script>
 </head>
 <body>
     <div class="gallery-container" id="gallery">
         <!-- フォルダー内の画像がここに表示されます -->
     </div>
+
+    <div id="text-input-container">
+        <div id="text-input-wrapper">
+            <img id="zoom-image" src="" alt="ズーム画像">
+            <div id="text-input-content">
+                <textarea id="text-input" placeholder="ここにテキストを入力..."></textarea>
+                <div class="zoom-controls">
+                    <button id="zoom-in-button">ズームイン</button>
+                    <button id="zoom-out-button">ズームアウト</button>
+                </div>
+                <button id="send-button">送信</button>
+                <button id="close-button">閉じる</button>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="folder.js"></script>
 </body>
 </html>
