--- a/admin.html
+++ b/admin.html
@@ -157,7 +157,8 @@
             </section>
             <section class="links">
                 <h2>管理機能</h2>
-                <a href="upload.html" class="link-button">原稿投稿ページへ</a>
+                <a href="upload.html" class="link-button">原稿を投稿する</a>
+                <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
             </section>
             <section class="form-section">
                 <h2>お知らせの投稿</h2>
