--- a/call.html
+++ b/call.html
@@ -131,11 +131,11 @@ footer {
         </section>
         <section class="contact-info">
             <h2>返信にかかる時間の目安</h2>
-            <p>お客様のお問合せに対する返信は１日〜３日の間の回答を目安としています</p>
+            <p>お客様のお問合せに対する返信は3日以内の回答を目安としています</p>
         </section>
         <section class="contact-info">
             <h2>管理者登録について</h2>
-            <p>「みんなの翻刻広場」管理者登録をご検討中の方は上記のメールアドレスへお問合せください。管理者への詳しい説明は下記のPDFをダウンドードしてください。必ずPDFの内容を見てメールでお問合せください。</p>
+            <p>「みんなの翻刻広場」管理者登録をご検討中の方は上記のメールアドレスへお問合せください。管理者への詳しい説明は下記のPDFをダウンドードしてください。</p>
             <a class="download-link" href="path/to/your/file.pdf" download="file.pdf">PDFをダウンロード</a>
         </section>
       
