--- a/index.html
+++ b/index.html
@@ -157,13 +157,16 @@
         }
 
         .text-box-container {
-            width: 100%;
-            max-width: 600px;
-            margin: 1rem 0;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
+    width: 100%;
+    max-width: 1000px; /* 最大幅を広げる */
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: row; /* 横並びにする */
+    gap: 1rem;
+    flex-wrap: wrap; /* 画面サイズに応じて折り返す */
+    justify-content: center; /* 中央揃え */
+}
+
 
         .text-box {
             background: #fff;
@@ -239,14 +242,14 @@
             <div class="text-box">
                 <h3>活字化にチャレンジしよう！</h3>
                 <img src="lsss.png" alt="説明3">
-                <p>このWEBサイトでは、わざわざWordなどのファイル提出もなく画像をクリックするだけで必要なツールが表示されます！手書きの記録を活字化することで、貴重な歴史遺産を次世代へと継承する取り組みに参加しませんか？
+                <p>このWEBサイトでは、Wordなどのファイルを提出する必要はありません。画像をクリックするだけで、必要なツールが表示されます！手書きの記録を活字化することで、貴重な歴史遺産を次世代に継承する取り組みに参加してみませんか？
 
                 </p>
             </div>
             <div class="text-box">
                 <h3>他のユーザーとのコミュニティ</h3>
                 <img src="fpp.png" alt="説明4">
-                <p>自分で作成した活字化がメンバーページのタイムラインに表示され、コメント機能により他のユーザーから修正点などのコメントができる一種のコミュニティとなっています。わからないところを🔳で表示して他のユーザと助け合い、一緒に活字化を完成させましょう！！</p>
+                <p>自分で作成した活字化データは、メンバーページのタイムラインに表示されます。他のユーザーから修正点などのコメントを受けられるコメント機能もあり、コミュニティとしての交流が可能です。わからない部分は⬜︎でマークして、他のユーザーと助け合いながら、一緒に活字化を完成させましょう！</p>
             </div>
         </div>
     </main>
